tests/invalid/ontology/upgrade-object-type-set-unit-symbol-without-name.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if upgrading an object type setting the unit symbol but not the unit name attribute is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:10:mc"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <!-- Unit symbol is set -->
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="2" data-type="string:10:mc" unit-symbol="m"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
